--- a/style.css
+++ b/style.css
@@ -111,13 +111,13 @@ input, select, textarea {
 		-webkit-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
-		border-bottom: solid 1px #e4e4e4;
+		
 		color: inherit;
 		text-decoration: none;
 	}
 
 		a:hover {
-			border-bottom-color: transparent;
+			
 			color: #4acaa8 !important;
 		}
 
@@ -1776,6 +1776,54 @@ input, select, textarea {
 
 		}
 
+/*Social link */
+ul.social {
+	list-style: none; /* Remove list bullets */
+  }
+  
+  ul.social li {
+	margin-bottom: 10px; /* Add some space between list items */
+  }
+  
+  ul.social li a {
+	text-decoration: none; /* Remove underline from anchor tags */
+	color: inherit; /* Inherit the color from the parent element */
+  }
+  ul.social li a i {
+	text-decoration: none; /* Remove underline from anchor tags */
+	color: inherit; /* Inherit the color from the parent element */
+  }
+  /* Apply specific styling for anchor tags on hover */
+  ul.social li a:hover {
+	text-decoration: none; /* Remove underline on hover */
+	color: #8e9391; /* Change color on hover */
+  }
+  
+.social{
+	display:grid;
+	grid-template-columns: repeat(4,50px);
+	grid-gap:10px;
+	justify-content:flex-start;
+	align-items: center;
+	
+	}
+.social li a{
+  background-color:#4acaa8;
+  width:36px;
+  height:36px;
+
+  display:grid;
+  justify-content: center;
+  align-items: center;;
+  text-decoration: none; /* Remove underlines */
+  color: inherit;
+  }	
+
+/* .social a i{
+color:white;
+} */
+
+
 /* Section/Article */
 
 	section.special, article.special {
@@ -2442,6 +2490,7 @@ input, select, textarea {
 /* Icons */
 
 	ul.icons {
+		margin-top:15px;
 		cursor: default;
 		list-style: none;
 		padding-left: 0;
