--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ input, select, textarea {
   }
   
   .resume-link:hover {
-	color: #596c61; /* Hover color */
+	color: #77bd94; /* Hover color */
   }
   
   .resume-link h4 {
@@ -254,7 +254,7 @@ input, select, textarea {
   }
   
   .resume-link:hover h4 {
-	color: #596c61;; /* Hover color for the h4 element */
+	color: #77bd94;; /* Hover color for the h4 element */
   }
 
   
@@ -2059,7 +2059,16 @@ color:white;
 		font-style: italic;
 		opacity: 1.0;
 	}
-
+ 
+	.email-span{
+		margin-left:15px;
+	}
+	.flex{
+		display:flex;
+		flex-direction: horizontal;
+		justify-content: space-between;
+		margin-bottom:15px;
+	}
 /* Box */
 
 	.box {
